paper service working