@@ -2,9 +2,9 @@ package net.conferencescheduling.spring.service;
 
 import com.opencsv.bean.*;
 import net.conferencescheduling.spring.model.dto.ConstraintDto;
+import net.conferencescheduling.spring.model.dto.InfoDto;
 import net.conferencescheduling.spring.model.dto.PaperDto;
 import net.conferencescheduling.spring.model.dto.PresentationDto;
-import net.conferencescheduling.spring.model.entity.Paper;
 import net.conferencescheduling.spring.model.entity.Presentation;
 import net.conferencescheduling.spring.repository.PresentationRepository;
 import org.modelmapper.ModelMapper;
@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import java.io.*;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class PresentationService {
@@ -31,31 +30,18 @@ public class PresentationService {
     private PaperService paperService;
 
     @Autowired
+    private InfoService infoService;
+
+    @Autowired
     public PresentationService(PresentationRepository presentationRepository) {
         this.presentationRepository = presentationRepository;
     }
 
     public List<Presentation> getAllPresentations() {
-
-//        Map<String, String> columnMappings = Map.of(
-//                "dayNo", "dayNo",
-//                "sessionNo", "sessionNo",
-//                "start_time", "start_time",
-//                "end_time", "end_time",
-//                "roomNo", "roomNo"
-//        );
-
-//        HeaderColumnNameTranslateMappingStrategy mappingStrategy =
-//                new HeaderColumnNameTranslateMappingStrategy();
-//        mappingStrategy.setColumnMapping(columnMappings);
-//        mappingStrategy.setType(PresentationDto.class);
-
-        //System.out.println(results);
         return presentationRepository.findAll();
-        //return results;
     }
 
-    public List<Presentation> createPresentation() throws IOException {
+    public List<Presentation> createPresentation() {
         final String csv_location = "constraints.csv";
         try {
             FileWriter writer = new
@@ -66,10 +52,10 @@ public class PresentationService {
                     new ColumnPositionMappingStrategy();
             mappingStrategy.setType(ConstraintDto.class);
 
-            String[] columns = new String[]
-                    {"dayNo", "parallelSessionCount","presentationDuration","sessionDuration",
-                            "sessionNo", "startTime", "endTime" };
-            mappingStrategy.setColumnMapping(columns);
+//            String[] columns = new String[]
+//                    {"dayNo", "parallelSessionCount","presentationDuration","sessionDuration",
+//                            "sessionNo", "startTime", "endTime" };
+//            mappingStrategy.setColumnMapping(columns);
 
             StatefulBeanToCsvBuilder<ConstraintDto> builder =
                     new StatefulBeanToCsvBuilder(writer);
@@ -78,11 +64,12 @@ public class PresentationService {
 
             beanWriter.write(constraints);
             writer.close();
+
         } catch (Exception e) {
             e.printStackTrace();
         }
 
-        //TODO ------------------------------------------------------------------------
+        //TODO CREATE PAPER CSV ------------------------------------------------------------------------
 
         final String papers_location = "papers.csv";
         try {
@@ -94,36 +81,55 @@ public class PresentationService {
                     new ColumnPositionMappingStrategy();
             mapping.setType(PaperDto.class);
 
-            StatefulBeanToCsvBuilder<ConstraintDto> builder =
+            StatefulBeanToCsvBuilder<PaperDto> builder =
                     new StatefulBeanToCsvBuilder(writer);
             StatefulBeanToCsv beanWriter =
                     builder.build();
 
             beanWriter.write(papers);
-
-
             writer.close();
+
         } catch (Exception e) {
             e.printStackTrace();
         }
+
+        //TODO CREATE INFO CSV ------------------------------------------------------------------------
+
+        final String info_location = "info.csv";
+        try {
+            FileWriter writer = new
+                    FileWriter(info_location);
+            List<InfoDto> infos = infoService.getAllInfo().stream().map(info -> modelMapper.map(info, InfoDto.class)).toList();
+
+            ColumnPositionMappingStrategy mapping =
+                    new ColumnPositionMappingStrategy();
+            mapping.setType(InfoDto.class);
+
+            StatefulBeanToCsvBuilder<InfoDto> builder =
+                    new StatefulBeanToCsvBuilder(writer);
+            StatefulBeanToCsv beanWriter =
+                    builder.build();
+
+            beanWriter.write(infos);
+            writer.close();
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+        System.out.println("OPTIMIZATION IS INITIALIZED!");
 
         //CALL PYTHON
-        String[] arguments = new String[] {"python", "conference.py", "huzhiwei", "25"};
         try {
-            Process process = Runtime.getRuntime().exec(arguments);
-            BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            String line = null;
-            while ((line = in.readLine()) != null) {
-                System.out.println(line);
-            }
-            System.out.println("test");
-            in.close();
-            int re = process.waitFor();
-            //System.out.println(re);
+            ProcessBuilder pb = new ProcessBuilder("python",
+                    "conference.py");
+            Process p = pb.start();
         } catch (Exception e) {
             e.printStackTrace();
         }
 
+        System.out.println("OPTIMIZATION IS DONE!");
+        System.out.println("READING OPTIMIZATION RESULT IS STARTED!");
         //READ RESULTS
 
         CsvToBean csvReader = null;
@@ -135,6 +141,7 @@ public class PresentationService {
         } catch (FileNotFoundException e) {
             e.printStackTrace();
         }
+        System.out.println("READING OPTIMIZATION RESULT IS DONE!");
 
         List<PresentationDto> results = csvReader.parse();
 
